Update README with Core Engine and ingestion steps
Added instructions for launching the Core Engine Application and ingesting a document.